--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
     <div id="main-content">
         <section class="hero-section">
+            <img src="images/burlington_logo.png" alt="Burlington Concrete and Asphalt Logo" class="hero-logo">
             <div class="hero-content">
                 <h1 class="main-headline">Durable, High-Quality <span data-config="serviceName">Service</span> Services in <span data-config="Jacksonville and Surrounding">City</span></h1>
                 <p class="sub-headline">Get a Fast, Fair, and Free Quote for Your Project Today. No Obligation.</p>
