--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <section class="hero-section">
             <img src="images/burlington_logo.png" alt="Burlington Concrete and Asphalt Logo" class="hero-logo">
             <div class="hero-content">
-                <h1 class="main-headline">Durable, High-Quality <span data-config="serviceName">Service</span> Services in <span data-config="Location">Jacksonville Florida Area</span></h1>
+                <h1 class="main-headline">Durable, High-Quality <span data-config="serviceName">Service</span> Services in the<span data-config="Location">Jacksonville Florida Area</span></h1>
                 <p class="sub-headline">Get a Fast, Fair, and Free Quote for Your Project Today. No Obligation.</p>
                 <a href="#form-section" class="cta-button">GET MY FREE QUOTE NOW</a>
                 <p class="trust-signals"><em>Licensed & Insured • 5-Star Rated</em></p>
