--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <div id="internal-notification" class="notification hidden">
-        <p><strong>🔔 New Lead Notification!</strong></p>
+        <p><strong>🚀 New Quote Request!</strong></p>
         <p id="notification-text"></p>
     </div>
 
