--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-config="Burlington Concrete and Asphalt, Inc.">Burlington Concrete and Asphalt, Inc - Free Quote</title>
+    <title data-config="Get More Local Leads With a Smart Website That Books Jobs for You — 14 Day Free Trial.">Free Quote</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
